--- a/templates/deleted_trades.html
+++ b/templates/deleted_trades.html
@@ -73,7 +73,7 @@
                                     {% if trade.total_profit_loss > 0 %}
                                         <span class="text-danger fw-bold">+¥{{ "%.3f"|format(trade.total_profit_loss) }}</span>
                                     {% elif trade.total_profit_loss < 0 %}
-                                        <span class="text-success fw-bold">¥{{ "%.3f"|format(trade.total_profit_loss) }}</span>
+                                        <span class="text-success fw-bold">-¥{{ "%.3f"|format((trade.total_profit_loss | abs)) }}</span>
                                     {% else %}
                                         <span class="text-muted">¥0.000</span>
                                     {% endif %}
