--- a/templates/edit_trade.html
+++ b/templates/edit_trade.html
@@ -36,7 +36,7 @@
                         {% if trade.total_profit_loss > 0 %}
                             <span class="fw-bold text-danger">+¥{{ "%.3f"|format(trade.total_profit_loss) }}</span>
                         {% elif trade.total_profit_loss < 0 %}
-                            <span class="fw-bold text-success">¥{{ "%.3f"|format(trade.total_profit_loss) }}</span>
+                            <span class="fw-bold text-success">-¥{{ "%.3f"|format((trade.total_profit_loss | abs)) }}</span>
                         {% else %}
                             <span class="fw-bold text-muted">¥0.000</span>
                         {% endif %}
